# sonnets

./: README.md  sonnets.cabal  stack.yaml
app/: Main.hs
src/: UnorderedPair.hs
