name:                sonnets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kmein/sonnets#readme
license:             BSD3
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           Copyright: (c) 2016 Kierán Meinhardt
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UnorderedPair
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable sonnets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , split
                     , sonnets
                     , safe
                     , containers
  default-language:    Haskell2010

test-suite sonnets-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sonnets
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/sonnets
